--- a/index.html
+++ b/index.html
@@ -52,8 +52,16 @@
               <span class="fragment"><li>Library support and the future</li></span>
             </ol>
             <aside class="notes">
-            Coroutines still feel a bit ephemeral. Deeply technical, still quite difficult to know when
-            to use them. I want to address this in this talk.
+            There have been some excellent introductory talks on coroutines - last years CppCon had lots.
+            Phil did an excellent talk as did Pawel, Andreas and several others. So, the question is, now
+            that we have some good introductory materials relating to the coroutine mechaanisms, what do
+            we need now? What do we need to bring coroutines into more widespread usage? Shout out some
+            ideas ... ok, so I think we've covered everything. So, number 1. how do coroutines fit in the
+            wider concurrency framework? Do we have a general understanding of that? What about more tangible
+            examples both in terms of real-world usage and learning examples? Empirical measurements and I'm
+            not talking about raw performance figures, but how do we compare coroutines with other approaches
+            like stackful coroutines or asynchronous callbacks. And finally, we need libary support (which is
+            coming) and a look at the future.
             </aside>
         </section>
 
@@ -74,6 +82,17 @@
             <span class="fragment"><li><a href="http://wg21.link/p2502">std::generator</a>, <a href="http://wg21.link/p2300">std::execution</a> and <a href="https://github.com/facebookexperimental/libunifex">libunifex</a></li></span>
           </ul>
           <aside class="notes">
+          This is what we are going to look at today. Firstly, we will consider how coroutines fit within the wider
+          concurrency framework, plus, we will go through how they work. The mechanisms behind coroutines are complex,
+          so I think it helps to hear that a few times.
+
+          Then we are going to look at a real-world example, mobile mesh networking, which is implemented using
+          coroutines and that will include a code example based on Lua.
+
+          That will lead us into a large C++ example where we are going to look at using Boost.Beast to create a web
+          server using three types of concurrency, so asychronous callbacks, stackful coroutines and C++20 coroutines.
+
+          Finally, we will look at some progress on std::generator, std::execution and libunifex.
           </aside>
         </section>
 
@@ -114,13 +133,17 @@
             </ul>
             <aside class="notes">
             Concurrency exists when at least two threads are 'in progress' at the same time.
+
             Parallelism arises when at least two threads are executing simultaneously.
 
-            I think it was Arthur O'Dwyer at CppCon 2020 who said that broadly speaking, parallelism in the context of Computer Science
-            generally requires some form of hardware. So, for example, my MAC is a quad core Intel i7 that's based on the Haswell
-            architecture. So this means it can run four threads, in parallel, at the same instant. If we go one level deeper we can
-            see that the Haswell microarchitecture is a dual-threaded, out-of-order microprocessor that is capable of decoding 5
-            instructions, issuing 4 fused uops (micro operations) and dispatching 8 uops on each cycle (and its clocked at 4GHz).
+            I think it was Arthur O'Dwyer at CppCon 2020 who said that as a rule of thumb, parallelism generally requires some
+            form of hardware. So multiple threads execute in parallel by virtue of the CPU having more than one core. For example,
+            my MAC is a quad core Intel i7 that's based on the Haswell architecture. So this means it can run four threads in parallel
+            (eight if you count the hyper threading).
+
+            If we look one level deeper we can see that the Haswell microarchitecture is capable of decoding 5 instructions,
+            issuing 4 micro operations and dispatching 8 uops on each cycle. So, by virtue of the hardware, we are getting
+            instruction level parallelism.
             </aside>
         </section>
 
@@ -142,10 +165,10 @@
             <p>
             <span class="fragment" style="color:yellow">Concurrency allows us to harness latency</span>
             <aside class="notes">
-            A note of clarification with the terms 'Coroutine' and 'Fibers'. They are sometimes used inter-changeably and
-            there are differences. Fibers give you a co-operatively scheduled light-weight threading model, which resembles OS threads.
-            You can implement fibers with coroutines (which is exactly what Lua and Boost.Fiber do), but coroutines themselves give you
-            more, for example, the capability to implement generators.
+            A note of clarification with the terms 'Coroutine' and 'Fibers'. They are sometimes conflated together, which is another
+            source of confusion. Fibers give you a co-operatively scheduled light-weight threading model, which resembles OS threads.
+            You can implement fibers with coroutines (example coming up), but coroutines are not equivalent to fibers. Coroutines
+            give you more, for example, the capability to implement generators.
             </aside>
         </section>
 
@@ -165,11 +188,14 @@
               </ul>
             </ul>
             <aside class="notes">
-            Event-driven applications are characterised by two things, background processing tasks and lots of one-off requests that have
-            to be serviced. If you think about networking and GUIs, this is especially true.
+            (Talk through slide)
 
-            Key point: if a process blocks after 5% of its time-slice, then the whole thing is context-switched, despite the possibility
-            that useful work can be done in other parts of the process.
+            If you look at event-driven applications (such as networking applications and GUIs), you'll notice
+            that they are characterised by two things, background processing tasks and lots of one-off requests
+            that have to be serviced.
+
+            If a process is single-threaded and blocks after 5% of its time-slice, then the whole thing is
+            context-switched, despite the possibility that useful work can be done in other parts of the process.
             </aside>
         </section>
 
@@ -182,14 +208,24 @@
                 <span class="fragment"><li>... stack, program counter, signal table</li></span>
               </ul>
               <span class="fragment"><li>C++03: OS, C++11: std::thread, C++20: std::jthread</li></span>
-              <span class="fragment" style="color:yellow"><li><a href="">Reentrancy</a>: correct when executed simultaneously</li></span>
-              <span class="fragment" style="color:yellow"><li><a href="">Thread safety</a>: the avoidance of race conditions</li></span>
+              <span class="fragment" style="color:yellow"><li><a href="https://en.wikipedia.org/wiki/Reentrancy_(computing)">Reentrancy</a>: multiple invocations can run concurrently</li></span>
+              <span class="fragment" style="color:yellow"><li><a href="https://en.wikipedia.org/wiki/Green_thread">Thread safety</a>: the avoidance of race conditions</li></span>
               <span class="fragment" style="color:yellow"><li><a href="https://en.wikipedia.org/wiki/Green_thread">Green Threads</a>: scheduled by a runtime library / VM</li></span>
             </ul>
             <aside class="notes">
-            Green Threads are threads that are scheduled by a runtime library or a virtual machine (so not an OS thread). The name actually
-            comes from the early days of Java - it was a co-operative threading model in Java 1.1, that was abandoned in 1.3 (back in the days
-            of the JDK 1.x for anyone that remembers it).
+            (Talk through slide)
+
+            Code that is reentrant is correct when multiple invocations can run correctly on multiple processors
+            or on a single processor system where a reentrant proceedure is interrupted, and can be safely called
+            again before the previous invocations have completed.
+
+            For me, thread safety is about manipulating shared data structures in a manner that avoids race
+            conditions. Thread local storage, mutual exclusion (serialisation) and atomic operations, which cannot
+            be interrupted by other threads are all common approaches to guarenteeding thread safety.
+
+            Green Threads are threads that are scheduled by a runtime library or a virtual machine (not an OS
+            thread). The name actually comes from the early days of Java - it was a co-operative threading model
+            in Java 1.1, that was abandoned in 1.3 (back in the days of the JDK 1.x for anyone that remembers it).
             </aside>
         </section>
 
@@ -203,6 +239,9 @@
               <span class="fragment" style="color:yellow"><li>See <a href="https://www.boost.org/doc/libs/1_81_0/libs/fiber/doc/html/fiber/overview.html">Boost.Fiber</a> for details</li></span>
             </ul>
             <aside class="notes">
+            (Talk through slide).
+
+            Ok, time for an example.
             </aside>
         </section>
 
@@ -273,10 +312,10 @@
             </span>
           </ul>
           <aside class="notes">
-          This example is designed to be fairly powerful. Simple Lua behaviour (that's easy to grasp), but the
-          architecture on which it sits is powerful. C++ to Lua bindings via Swig, multi-level logging using
-          spdlog, network comms via Boost.Asio with a CMake build flow. So, the idea is that the example is
-          straightforward to grasp but then you can clone it, take it forward and use it in your own work.
+          The idea of the example code is designed to be extensible. Simple Lua behaviour (that's easy to grasp), but the
+          architecture on which it sits is powerful. C++ to Lua bindings via SWIG, multi-level logging using
+          spdlog, network communication via Boost.Asio with a CMake build flow. So, the idea is that the example
+          is straightforward to grasp but then you can extend it and , take it forward and use it in your own work.
           </aside>
         </section>
 
@@ -906,15 +945,24 @@ co_await async_write(..., use_awaitable);
             <span class="fragment"><li>Recode for simplicity and test with <a href="https://httpd.apache.org/docs/2.4/programs/ab.html">Apache Bench</a></li></span>
           </ul>
           <aside class="notes">
-            Yes. There's definitely still a use case for coroutine2. With c++20 coroutines, the only way to suspend a compound operation is if all parts are themselves coroutines. Specifically, if f calls a(), which calls b() which calls c() which calls d(), they must all be coroutine aware. They can't just "call" the next function, they must co_await it.
+          Yes. There's definitely still a use case for coroutine2. With c++20 coroutines, the only way to suspend a
+          compound operation is if all parts are themselves coroutines. Specifically, if f calls a(), which calls b()
+          which calls c() which calls d(), they must all be coroutine aware. They can't just "call" the next function,
+          they must co_await it.
 
-By contrast, with coroutine2 this isn't the case. a, b, c don't need to know that they're running in a coroutine at all. If d suspends by reading from a pull_type or writing to a push_type, the entire call sack suspends up to the nearest enclosing coroutine.
+          By contrast, with coroutine2 this isn't the case. a, b, c don't need to know that they're running in a 
+          coroutine at all. If d suspends by reading from a pull_type or writing to a push_type, the entire call 
+          stack suspends up to the nearest enclosing coroutine.
 
-This has real advantages. For instance, by implementing an appropriate streambuf, I can use istream/ostream to lazily read/write anything. The higher level classes that implement operator<</operator>> are just regular code, as is the implementation of istream/osream. Yet when we need to fetch/flush more bytes the entire call stack can suspend.
+          This has real advantages. For instance, by implementing an appropriate streambuf, I can use istream/ostream
+          to lazily read/write anything. The higher level classes that implement operator<</operator>> are just regular
+          code, as is the implementation of istream/osream. Yet when we need to fetch/flush more bytes the entire call
+          stack can suspend.
 
-On the other hand, if you don't need to suspend entire stacks of operations, or if all your code can be changed to be language coroutine aware, then the stackless coroutines of c++20 are a better tool than boost.coroutine2 was.
+          On the other hand, if you don't need to suspend entire stacks of operations, or if all your code can be changed
+          to be language coroutine aware, then the stackless coroutines of c++20 are a better tool than boost.coroutine2 was.
 
-https://www.reddit.com/r/cpp/comments/10fkyru/are_boostcoroutine2_coroutines_still_relevant_now/
+          See: https://www.reddit.com/r/cpp/comments/10fkyru/are_boostcoroutine2_coroutines_still_relevant_now/
           </aside>
         </section>
 
@@ -1568,7 +1616,13 @@ int main(int argc, char* argv[])
               <span class="fragment"><li>Check for resource exhaustion e.g. <span style="color:yellow">lsof -p <pid></span></li></span>
             </ul>
           <aside class="notes">
-          One common idiom is to managing object lifetime is to have the I/O object be managed by a single class that inherits from enable_shared_from_this. When a class inherits from enable_shared_from_this, it provides a shared_from_this() member function that returns a valid shared_ptr instance managing this. A copy of the shared_ptr is passed to completion handlers, such as a capture-list in lambdas or passed as the instance handle to bind(), causing the lifetime of the I/O object to be extended to at least as long as the handler. See the Boost.Asio asynchronous TCP daytime server tutorial for an example using this approach.
+          One common idiom is to managing object lifetime is to have the I/O object be managed by a single class
+          that inherits from enable_shared_from_this. When a class inherits from enable_shared_from_this, it
+          provides a shared_from_this() member function that returns a valid shared_ptr instance managing this.
+          A copy of the shared_ptr is passed to completion handlers, such as a capture-list in lambdas or passed
+          as the instance handle to bind(), causing the lifetime of the I/O object to be extended to at least as
+          long as the handler. See the Boost.Asio asynchronous TCP daytime server tutorial for an example using
+          this approach.
           </aside>
         </section>
 
@@ -1601,9 +1655,17 @@ int main(int argc, char* argv[])
               <span class="fragment"><ul><li>Targeting C++26 (see also: <a href="https://github.com/facebookexperimental/libunifex">libunifex</a>)</li></ul></span>
             </ul>
             <aside class="notes">
-The coroutine language feature mitigates these shortcomings somewhat with the HALO optimization Halo: coroutine Heap Allocation eLision Optimization: the joint response, which leverages existing compiler optimizations such as allocation elision and devirtualization to inline the coroutine, completely eliminating the runtime overhead. However, HALO requires a sophisticated compiler, and a fair number of stars need to align for the optimization to kick in. In our experience, more often than not in real-world code today’s compilers are not able to inline the coroutine, resulting in allocations and indirections in the generated code.
+            The coroutine language feature mitigates these shortcomings somewhat with the HALO optimization Halo:
+            coroutine Heap Allocation eLision Optimization: the joint response, which leverages existing compiler
+            optimizations such as allocation elision and devirtualization to inline the coroutine, completely
+            eliminating the runtime overhead. However, HALO requires a sophisticated compiler, and a fair number
+            of stars need to align for the optimization to kick in. In our experience, more often than not in
+            real-world code today’s compilers are not able to inline the coroutine, resulting in allocations and
+            indirections in the generated code.
 
-In a suite of generic async algorithms that are expected to be callable from hot code paths, the extra allocations and indirections are a deal-breaker. It is for these reasons that we consider coroutines a poor choice for a basis of all standard async.
+            In a suite of generic async algorithms that are expected to be callable from hot code paths, the extra
+            allocations and indirections are a deal-breaker. It is for these reasons that we consider coroutines a
+            poor choice for a basis of all standard async.
             </aside>
         </section>
 
