Updated Slides with Small Edits

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <span class="fragment"><li><a href="https://www.swig.org/">SWIG 4.0.2</a></li></span>
               <span class="fragment"><li><a href="https://www.cmake.org/">CMake 3.25.2</a></li></ul></span>
               <span class="fragment"><li>Lua examples run with <a href="https://www.lua.org/download.html">Lua 5.4.4</a></li></span>
-              <span class="fragment"><li>Tested on Linux Mint 19 and Mac OS X (<font size="6">Mojave</font>, <font size="6">Big Sur</font>)</li></span>
+              <span class="fragment"><li>Tested on Linux Mint 19 and Mac OS X (Ventura)</li></span>
             </ul>
           <aside class="notes">
           </aside>
@@ -305,7 +305,7 @@
           <h2><a href="">Example: Lua Networking Fibers</a></h2>
           <ul>
             <span class="fragment"><li>Lua behaviour: two nodes sending messages</li></span>
-            <span class="fragment"><li>Includes two actions: 'Connector' and 'Log'</li></span>
+            <span class="fragment"><li>Includes three actions: 'Connector', 'Timer' and 'Log'</li></span>
             <span class="fragment"><li>Also provides: <a href="http://swig.org">SWIG</a>, CMake, Lua 'main' code</li></span>
             <span class="fragment"><li>Other bindings exist: e.g. 
               <a href="https://github.com/ThePhD/sol2">the PhD's Sol3</a></li>
@@ -1778,7 +1778,7 @@ int main(int argc, char* argv[])
               <span class="fragment"><ul><li>Not yet implemented in standard libraries</li></ul></span>
               <span class="fragment"><ul><li>Reference implementation: <a href="https://godbolt.org/z/5hcaPcfvP">godbolt.org</a></li></ul></span>
 
-              <span class="fragment"><li><a href="http://wg21.link/p2300">P2300R6</a>: <code>std::execution</code></li></span>
+              <span class="fragment"><li><a href="http://wg21.link/p2300">P2300</a>: <code>std::execution</code></li></span>
               <span class="fragment"><ul><li>Standardised asynchronous execution</li></ul></span>
               <span class="fragment"><ul><li>... on generic execution contexts</li></ul></span>
               <span class="fragment"><ul><li>Targeting C++26 (see also: <a href="https://github.com/facebookexperimental/libunifex">libunifex</a>)</li></ul></span>
